@@ -322,6 +322,8 @@ Pooka.theme.editableFields.userFont.label=User Font
 Pooka.theme.editableFields.smallFont.label=Small Font
 Pooka.theme.editableFields.monospacedFont.label=Monospaced Font
 
+Pooka.theme._default.label=Default Theme
+
 Pooka.folderPanel.theme.label=Navigation Panel Theme
 Pooka.messagePanel.theme.label=Desktop Panel Theme
 
