@@ -1,3 +1,6 @@
+fixed the theme support so that the default theme is actually used for
+just about everything.
+
 fixed a bug where finding the first unread message was done on the 
 awt event thread instead of the FolderThread.
 
